# cpp_sdl2_testing

./: CMakeLists.txt
src/: gog.cpp  main.cpp
